k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ontoserver
  labels:
    name: ontoserver
